<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile</string>
    <string name="nav_header_subtitle">profile_email@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="send_button">Send button</string>
    <string name="add_channel">Add Channel</string>
    <string name="please_log_in">Please Log In</string>
    <string name="message">message:</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP!</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="generate_background_colour">Generate background colour</string>
    <string name="create_user">Create user</string>
    <string name="user_name">user name</string>
    <string name="create_avatar">Create avatar</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
</resources>
