<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateUserActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/createUsernameTxt" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="user name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/createEmailTxt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/createUsernameTxt" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/createPasswordTxt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/createEmailTxt" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/password"/>
    <TextView
            android:text="@string/tap_to_generate_user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/createPasswordTxt"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/profiledefault"
            android:id="@+id/createAvatarImg" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:onClick="generateUserAvatar"/>
    <Button
            android:text="@string/generate_background_colour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/backgroundColourBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:background="@color/colorPrimary"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/createAvatarImg"
            android:onClick="generateBackgroundColourBtnClicked"/>
    <Button
            android:text="@string/create_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/createUserBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginStart="32dp" android:background="@color/colorPrimary"
            android:onClick="createUserBtnClicked"/>
</androidx.constraintlayout.widget.ConstraintLayout>