<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".Controller.MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/please_log_in"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:textAlignment="center"
            tools:text="Please Log In" android:id="@+id/mainChannelName" android:textSize="18sp"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/messageTextField"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/message" android:importantForAutofill="no"/>
    <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp" app:srcCompat="@drawable/ic_menu_send"
            android:id="@+id/sendMessageBtn"
            android:tint="@color/colorPrimary" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@android:color/transparent"
            android:onClick="sendMessageBtnClicked" android:contentDescription="@string/send_button"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/mainChannelName"
            app:layout_constraintBottom_toTopOf="@+id/messageTextField" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/messageListView"/>

</androidx.constraintlayout.widget.ConstraintLayout>